Emacs - Fix smerge keybindings

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -5951,15 +5951,18 @@ Currently broken for github.
 #+end_src
 
 ** Smerge
-TODO RET and m-a don't work
-TODO normalize keymaps when starting smerge mode
 #+begin_src emacs-lisp
 (general-with-package 'smerge-mode
-  ;; has proven to be necessary at least some of the time
-  (general-add-hook 'git-timemachine-mode-hook #'evil-normalize-keymaps)
-  (general-def 'normal smerge-mode-map "RET" #'smerge-keep-current)
+  ;; use `evil-define-minor-mode-key' because at least in some cases the
+  ;; `evil-normalize-keymaps' workaround has been necessary and to give higher
+  ;; priority than conflicting lsp-mode keybindings
+  (general-def 'normal smerge-mode
+    :definer 'minor-mode
+    "RET" #'smerge-keep-current)
+
   ;; can temporarily override m bindings until conflicts resolved
-  (general-m smerge-mode-map
+  (general-m smerge-mode
+    :definer 'minor-mode
     "k" #'smerge-vc-next-conflict
     "n" #'smerge-next
     "e" #'smerge-prev
