Emacs - Add unpackaged/reload-package
Needs some work to get working correctly though

--- a/emacs/.emacs.d/awaken.org
+++ b/emacs/.emacs.d/awaken.org
@@ -1272,6 +1272,62 @@ This should be run in a graphical frame."
   (round (* 0.0078125 (noct-default-monitor-width))))
 #+end_src
 
+** Unpackaged
+See [[https://github.com/alphapapa/unpackaged.el#reload-a-packages-features][unpackaged]].
+
+#+begin_src emacs-lisp
+;; modified to work with straight
+;; TODO currently breaks things
+(defun unpackaged/reload-package (package &optional allp)
+  "Reload PACKAGE's features.
+If ALLP is non-nil (interactively, with prefix), load all of its
+features; otherwise only load ones that were already loaded.
+
+This is useful to reload a package after upgrading it.  Since a
+package may provide multiple features, to reload it properly
+would require either restarting Emacs or manually unloading and
+reloading each loaded feature.  This automates that process.
+
+Note that this unloads all of the package's symbols before
+reloading.  Any data stored in those symbols will be lost, so if
+the package would normally save that data, e.g. when a mode is
+deactivated or when Emacs exits, the user should do so before
+using this command."
+  (interactive
+   (list (intern (completing-read "Package: "
+                                  noct-straight-packages nil t))
+         current-prefix-arg))
+  ;; This finds features in the currently installed version of PACKAGE, so if
+  ;; it provided other features in an older version, those are not unloaded.
+  (when (yes-or-no-p
+         (format "Unload all of %s's symbols and reload its features? " package))
+    (let* ((package-name (symbol-name package))
+           (package-dir (file-name-directory
+                         (locate-file package-name load-path (get-load-suffixes))))
+           (package-files (directory-files package-dir 'full (rx ".el" eos)))
+           (package-features
+            (cl-loop for file in package-files
+                     when
+                     (with-temp-buffer
+                       (insert-file-contents file)
+                       (when (re-search-forward
+                              (rx bol "(provide" (1+ space)) nil t)
+                         (goto-char (match-beginning 0))
+                         (cadadr (read (current-buffer)))))
+                     collect it)))
+      (unless allp
+        (setf package-features (seq-intersection package-features features)))
+      (dolist (feature package-features)
+        (ignore-errors
+          ;; Ignore error in case it's not loaded.
+          (unload-feature feature 'force)))
+      (dolist (feature package-features)
+        (require feature))
+      (message "Reloaded: %s" (mapconcat #'symbol-name package-features " ")))))
+
+;; (general-s "s." #'unpackaged/reload-package)
+#+end_src
+
 * Basic and Builtin Functionality
 ** General Settings
 #+begin_src emacs-lisp
